# datamascot

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: bootstrap.yml  scrape-dhan-eod.yml  scrape-mfapi-nav.yml  scrape-rupeevest-holdings.yml  scrape-rupeevest-metadata.yml  scrape-scan360.yml  scrape-trendlyne-qvt.yml  scrape-trendlyne-swot.yml
migrations/: 001_bible_tables.sql  002_market_data.sql  003_analytics.sql  004_operations.sql  005_rls_policies.sql
scripts/: bootstrap_identity.py  push_secrets.ps1  run_dhan.py  run_mfapi.py  run_rupeevest.py  run_scan360.py  run_trendlyne.py
src/dastock/: __init__.py  config.py
src/dastock/db/: client.py
src/dastock/db/repositories/: analytics.py  mutual_funds.py  stocks.py
src/dastock/identity/: resolver.py
src/dastock/models/: dhan.py  mfapi.py  rupeevest.py  scan360.py  trendlyne.py
src/dastock/pipeline/: dead_letter.py  run_tracker.py  runner.py
src/dastock/scrapers/: base.py  dhan.py  exceptions.py  mfapi.py  rupeevest.py  scan360.py  trendlyne.py
tests/: conftest.py
tests/integration/: test_smoke.py
tests/unit/: test_base_scraper.py  test_config.py  test_dhan.py  test_imports.py  test_mfapi.py  test_pipeline.py  test_resolver.py  test_rupeevest.py  test_scan360.py  test_trendlyne.py
