[project]
name = "dastock"
version = "0.1.0"
description = "Open-source Indian stock market data scraper — Supabase + GitHub Actions"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "dastock contributors" }]

dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "supabase>=2.5.0",
    "tenacity>=8.3.0",
    "pyrate-limiter>=3.6.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.2.0",
    "python-dateutil>=2.9.0",
    "click>=8.1.0",
    "dhanhq>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "respx>=0.21.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dastock"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers"

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
